fixed page jump on first load, forced scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,12 @@ body {
   }
 }
 
+@media screen and (min-width: 900px) {
+  html {
+    overflow-y: scroll;
+  }
+}
+
 @media screen and (max-width: 615px) {
   .BG {
     width: 800px;
